--- a/_posts/research/2018-09-01-soda-plan.md
+++ b/_posts/research/2018-09-01-soda-plan.md
@@ -8,6 +8,8 @@ tags:
     - post format
 categories:
     - research
+thumbnail: /images/blog_thumbnails/2018_09_01_IMG_6873_tn.jpg
+
 ---
 
 <img src="/assets/img/2018_09_01_IMG_6873.jpg" width="600" tag="R/V Sikuliaq at the dock in Nome">
