--- a/_posts/research/2018-09-05-pies.md
+++ b/_posts/research/2018-09-05-pies.md
@@ -8,6 +8,7 @@ tags:
     - post format
 categories:
     - research
+thumbnail: /images/blog_thumbnails/2018_09_05_schematic_tn.jpg
 ---
 
 Yesterday, the ship spent most of the day and night transiting and positioning to deploy three small moorings in a small notch of the Chukchi continental shelf slope, where the Canada Basin forms almost a 90 degree angle. Tom Peacock, a professor at MIT and one of the Principal Investigators of the SODA cruise is interested in studying the deep wave energy in this area. In particular, he's looking for Near Inertial Waves, which are generated at the surface by winds and propagate down toward the seafloor.
